--- a/app/src/main/res/layout/activity_grid_item.xml
+++ b/app/src/main/res/layout/activity_grid_item.xml
@@ -15,14 +15,14 @@
         android:text="Terra"
         android:textColor="#000"
         android:textSize="30dp" />
-    
+
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:id="@+id/imageView"
-        android:src="@drawable/terra"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/griddata"
-        android:layout_marginTop="27dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
+        android:src="@drawable/terra" />
 
 </RelativeLayout>
